# django-gitversions

./: .coveragerc  .gitlab-ci.yml  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
django_gitversions/: __init__.py  base.py  git.py  models.py  serializers.py  settings.py  signals.py  tasks.py  utils.py
django_gitversions/backends/: base.py  git.py
django_gitversions/management/commands/: _utils.py  gitrestore.py  gitversions.py  restore.py
docs/: make.bat
docs/source/: conf.py  index.rst
requirements/: default.txt  tests.txt
tests/: local_settings.py  manage.py
tests/testapp/: settings.py
tests/testapp/tests/: __init__.py  test_commands.py
